fixes #128 - throw away redundant shenanigans with classpath & module path